src/objects/Managed_Package_Tracking__c.object
<CustomObject>
    <label>Managed Package Tracking</label>
    <nameField>
        <label>Managed Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Managed Package Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Free_Licenses__c</fullName>
        <label>Free Licenses?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Licenses_Assigned_in_Sandboxes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are you required to assign managed package licenses to users in environments other than Production for the app functionality to work? If yes, please check the box.</inlineHelpText>
        <label>Licenses Assigned in Sandboxes?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Installation_Instructions__c</fullName>
        <label>Special Installation Instructions</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <label>Vendor Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Support_POC_Email__c</fullName>
        <label>Vendor Support POC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Vendor_Support_POC__c</fullName>
        <label>Vendor Support POC</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Vendor_Name__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>